// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "./CompositeFilter.proto";


package ccsds_com.protobuf;

message CompositeFilterSet {
extensions 2 to 102;

  repeated ccsds_com.protobuf.CompositeFilter compositeFilter = 1;
}
